--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.16.0"
+bevy = { version = "0.16.0", features = ["bevy_remote"] }
 enum-iterator = "2.1.0"
